[package]
name = "stb_image"
version = "0.3.0"
authors = ["The Servo Project Developers"]
description = "Bindings to the stb image encoding/decoding library."
repository = "https://github.com/servo/rust-stb-image"
documentation = "https://docs.rs/stb_image"
keywords = ["image", "jpeg", "png", "bmp", "gif"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1"
